Fixing header size on smaller screens

--- a/sass/partials/_entryheader.scss
+++ b/sass/partials/_entryheader.scss
@@ -36,8 +36,11 @@
 	display: table;
 	margin-top: 0;
 	width: 100%;
-	height: 400px;
+	height: 187px;
 	overflow: hidden;
+	@media #{$large} {
+		height: 400px;
+	}
 	.header-title-wrap {
 		display: table-cell;
 		vertical-align: middle;
@@ -73,8 +76,11 @@
 	// left: -50%;
 	// width: 200%;
 	// height: 200%;
-	min-height: 400px;
+	min-height: 187px;
 	overflow: hidden;
+	@media #{$large} {
+		min-height: 400px;
+	}
 	&:after {
 		content: '';
 		position: absolute;
